--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^23.1.1",
     "axios": "^1.6.4",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
