--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
     "@studio-freight/lenis": "^1.0.37",
-    "@tweenjs/tween.js": "^23.1.1",
     "axios": "^1.6.4",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
+    "gsap": "^3.12.5",
+    "gsap-trial": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
