--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gsap-trial": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.21.1",
     "tailwind-merge": "^2.2.1",
     "vite-plugin-svgr": "^4.2.0"
